--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>KTP Course Information</h1>
-        <a href="reviews/cmsc.html">KTP Courses</a>
+        <a href="reviews/cmsc.html">CMSC Courses</a>
         <p>Here you can find REAL thoughts about the courses offered at UChicago :) </p>
     </body>
 </html>
